src/test/deca/context/invalid/homemade/multiple_declar_decompile.res
{
	boolean c = true;
	int c;
}
